<resources>
    <string name="app_name">Rangkiang</string>
    <string name="Nama_Loading">Aplikasi?</string>
    <string name="title_activity_login">Rangkiang</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email completions."</string>
    <string name="email">E-Mail</string>
    <string name="nama">Nama</string>
    <string name="password">Password</string>
    <string name="daftar">Daftar</string>
    <string name="login">Login</string>
    <string name="selamat_datang">Selamat Datang,</string>

    <!-- monitoring -->
    <string name="check">Check!</string>
    <string name="LogOut">Keluar</string>
    <string name="Ladang">Ladang</string>
    <string-array name="ListLadang">
        <item>Padi</item>
        <item>Tomat</item>
        <item>Cabe</item>
        <item>Ubi Jalar</item>
    </string-array>
    <string-array name="Urutan">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
</resources>
